Update style.css to scale correctly on mobile devices

--- a/moviesstore/static/css/style.css
+++ b/moviesstore/static/css/style.css
@@ -32,11 +32,13 @@
   color: #fff;
 }
 .img-card-200 {
-  width: fit-content;
-  max-height: 200px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .img-card-400 {
-  width: fit-content;
-  max-height: 400px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
